<resources>
    <string name="app_name">AsaTaBai</string>
    <string name="about_the_developers">About the Developers</string>
    <string name="settings">Settings</string>
    <string name="night_mode">Night Mode</string>
    <string name="language">Language</string>
    <string name="jeep">jeep</string>
    <string name="asa_ta_bai">Asa Ta Bai?</string>
    <string name="username">Username</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account? Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="password">Password</string>
    <string name="about_the_developers2">About the Developers</string>

    <string name="language_english">English</string>
    <string name="language_filipino">Filipino</string>
    <string name="language_cebuano">Cebuano</string>
    <string name="title_activity_maps">MapsActivity</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="default_web_client_id">656047469522-8f6kefgask6c1c76cpqhn0q49edlrh3m.apps.googleusercontent.com</string>
    <string name="jeepney_codes">Jeepney Codes</string>
    <string name="edit">Edit</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="my_account">My Account</string>
    <string name="destinations">Destinations</string>
    <string name="recent_routes">Recent Routes</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="app_preferences">App Preferences</string>
    <string name="help_amp_support"><![CDATA[Help & Support]]></string>
    <string name="faq">FAQ</string>
    <string name="contact_support">CONTACT SUPPORT</string>
    <string name="general">General</string>
    <string name="about_the_app">ABOUT THE APP</string>
    <string name="title_activity_landmark_map">LandmarkMapActivity</string>
    <string name="landmarks">LANDMARKS</string>
    <string name="welcome_user">Welcome, %1$s!</string>

    <!-- General -->
    <string name="ok">Ok</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <!-- About the App -->
    <string name="about_app_title">About The App</string>
    <string name="about_app_message">
    This app provides information about Cebu\'s jeepney routes, helping commuters navigate the city efficiently. It details different jeepney routes, making travel easier for locals and tourists. Stay updated with the latest route changes and find the best way to reach your destination.
    </string>

    <!-- FAQ -->
    <string name="faq_title">FAQ</string>
    <string name="faq_message"><![CDATA[
Frequently Asked Questions:\n\n
1. How do I use the app?\n
 - On the landing page, select \'DestinationsActivity\' to find locations and their corresponding destination codes.\n
 - Select \'Jeepney Codes\' to view available jeepney codes for different routes.\n\n
2. Is this app free?\n
 - Yes, this app is completely free to use.\n\n
3. How often are the codes updated?\n
 - We update the codes regularly to reflect any changes in Cebu\'s jeepney system.
]]></string>
<!--    <string name="faq_message">Hello</string>-->

    <!-- Support -->
    <string name="support_title">Contact Support</string>
    <string name="support_message">
        For support, please reach out to us via:\n\n📧 Email: gumaponraziff@gmail.com &amp; \n📞 Phone: +63 963 739 9301
    </string>

    <!-- Logout -->
    <string name="logout_title">Logout</string>
    <string name="logout_message">Are you sure you want to log out?</string>
    <string name="currentpassword">CurrentPassword</string>

</resources>