<androidx.constraintlayout.widget.ConstraintLayout xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

        <!-- Username -->

        <!-- Email -->

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="154dp"
        android:layout_height="143dp"
        android:layout_marginTop="88dp"
        android:src="@drawable/account"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintHorizontal_bias="0.518"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/krona"
            android:text="@string/my_account"
            android:textSize="21dp"
            app:layout_constraintBottom_toTopOf="@+id/editUsername"
            app:layout_constraintEnd_toStartOf="@+id/guideline3"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/imageView1" />

        <EditText
            android:id="@+id/editUsername"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="76dp"
            android:background="@android:color/transparent"
            android:fontFamily="@font/krona"
            android:hint="Username"
            android:inputType="textPersonName"
            android:padding="10dp"
            android:textColorHint="@color/black"
            app:layout_constraintEnd_toStartOf="@id/guideline3"
            app:layout_constraintStart_toStartOf="@id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/imageView1" />

        <EditText
            android:textColor="@color/black"
            android:id="@+id/editEmail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="Email"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:background="@android:color/transparent"
            android:fontFamily="@font/krona"
            android:textColorHint="@color/black"
            app:layout_constraintTop_toBottomOf="@id/editUsername"
            app:layout_constraintStart_toStartOf="@id/guideline"
            app:layout_constraintEnd_toStartOf="@id/guideline3"
            android:layout_marginTop="8dp" />

        <!-- Password -->
    <EditText
        android:id="@+id/currentPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@android:color/transparent"
        android:fontFamily="@font/krona"
        android:hint="CurrentPassword"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toStartOf="@id/guideline3"
        app:layout_constraintStart_toStartOf="@id/guideline"
        app:layout_constraintTop_toBottomOf="@id/editEmail" />

    <EditText
        android:id="@+id/editPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@android:color/transparent"
        android:fontFamily="@font/krona"
        android:hint="Password"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toStartOf="@id/guideline3"
        app:layout_constraintStart_toStartOf="@id/guideline"
        app:layout_constraintTop_toBottomOf="@id/currentPassword" />

        <!-- Save Button -->

        <!-- Titles and other existing textviews remain unchanged -->

        <EditText
            android:id="@+id/editTextConfirmPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@android:color/transparent"
            android:fontFamily="@font/krona"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:padding="10dp"
            android:textColorHint="@color/black"
            app:layout_constraintEnd_toStartOf="@id/guideline3"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@id/guideline"
            app:layout_constraintTop_toBottomOf="@id/editPassword" />

        <Button
            android:id="@+id/btnSave"
            android:layout_width="104dp"
            android:layout_height="58dp"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/krona"
            android:text="@string/edit"
            app:layout_constraintEnd_toStartOf="@+id/guideline3"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/editTextConfirmPassword" />

    <ImageView
        android:background="@color/black"
        android:id="@+id/imageView3"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginStart="8dp"
        android:src="@drawable/leftarrow"
        app:layout_constraintBottom_toTopOf="@+id/imageView1"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.12" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.88" />

    </androidx.constraintlayout.widget.ConstraintLayout>
